plugin-bazel/src/test/testData/starlark/annotations/rules/InvalidRuleArgumentAnnotatorTestData.bzl
alias(<error descr="No argument named wrongArgName found for built-in rule alias">wrongArgName</error> = "")